error.txt

wh@wh-ThinkBook-16p-G5-IRX:~/Desktop/Car/web/build$ cmake ..
-- The C compiler identification is GNU 13.3.0
-- The CXX compiler identification is GNU 13.3.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.83.0/BoostConfig.cmake (found version "1.83.0") found components: system thread 
-- Configuring done (0.3s)
-- Generating done (0.0s)
-- Build files have been written to: /home/wh/Desktop/Car/web/build
wh@wh-ThinkBook-16p-G5-IRX:~/Desktop/Car/web/build$ make
[ 50%] Building CXX object CMakeFiles/car_control_ws.dir/main.cpp.o
/home/wh/Desktop/Car/web/main.cpp: In function ‘int main()’:
/home/wh/Desktop/Car/web/main.cpp:66:61: error: ‘::_1’ has not been declared; did you mean ‘std::placeholders::_1’?
   66 |     ws_server.set_open_handler(bind(&on_open, &ws_server, ::_1));
      |                                                             ^~
      |                                                             std::placeholders::_1
In file included from /usr/include/websocketpp/common/functional.hpp:53,
                 from /usr/include/websocketpp/transport/base/endpoint.hpp:31,
                 from /usr/include/websocketpp/transport/iostream/endpoint.hpp:31,
                 from /usr/include/websocketpp/config/core.hpp:40,
                 from /usr/include/websocketpp/config/asio_no_tls.hpp:31,
                 from /home/wh/Desktop/Car/web/main.cpp:1:
/usr/include/c++/13/functional:294:48: note: ‘std::placeholders::_1’ declared here
  294 |     _GLIBCXX_PLACEHOLDER const _Placeholder<1> _1;
      |                                                ^~
/home/wh/Desktop/Car/web/main.cpp:67:63: error: ‘::_1’ has not been declared; did you mean ‘std::placeholders::_1’?
   67 |     ws_server.set_close_handler(bind(&on_close, &ws_server, ::_1));
      |                                                               ^~
      |                                                               std::placeholders::_1
/usr/include/c++/13/functional:294:48: note: ‘std::placeholders::_1’ declared here
  294 |     _GLIBCXX_PLACEHOLDER const _Placeholder<1> _1;
      |                                                ^~
/home/wh/Desktop/Car/web/main.cpp:68:67: error: ‘::_1’ has not been declared; did you mean ‘std::placeholders::_1’?
   68 |     ws_server.set_message_handler(bind(&on_message, &ws_server, ::_1, ::_2));
      |                                                                   ^~
      |                                                                   std::placeholders::_1
/usr/include/c++/13/functional:294:48: note: ‘std::placeholders::_1’ declared here
  294 |     _GLIBCXX_PLACEHOLDER const _Placeholder<1> _1;
      |                                                ^~
/home/wh/Desktop/Car/web/main.cpp:68:73: error: ‘::_2’ has not been declared; did you mean ‘std::placeholders::_2’?
   68 |     ws_server.set_message_handler(bind(&on_message, &ws_server, ::_1, ::_2));
      |                                                                         ^~
      |                                                                         std::placeholders::_2
/usr/include/c++/13/functional:295:48: note: ‘std::placeholders::_2’ declared here
  295 |     _GLIBCXX_PLACEHOLDER const _Placeholder<2> _2;
      |                                                ^~
make[2]: *** [CMakeFiles/car_control_ws.dir/build.make:76：CMakeFiles/car_control_ws.dir/main.cpp.o] 错误 1
make[1]: *** [CMakeFiles/Makefile2:83：CMakeFiles/car_control_ws.dir/all] 错误 2
make: *** [Makefile:91：all] 错误 2